# issue-tracker-api

./: .coverage  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.dev.yml  docker-compose.prod.yml  init_db.py  pyproject.toml  readme.md  requirements.txt  run.py
app/: __init__.py  config.py  decorator.py  extensions.py  models.py  routes.py  schemas.py
app/core/: config.py
app/decorators/: __init__.py  rbac.py
issue_tracker_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/versions/: 58fb6d946e58_initial_migration.py
tests/: conftest.py  test_auth.py  test_issues.py  test_token.py
